--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
 					<circle cx="12" cy="12" r="3" fill="#111"></circle>
 				</svg>
-				Drag projects left or right...Enjoy
+				Drag left or right...Enjoy
 			</div>
 		</div>
 
@@ -57,7 +57,7 @@
 								</div>	
 								<div class="project__slide"><img src="img/work/slider/hopps/hopps-push-away.jpg" alt=""></div>
 								<div class="project__slide"><img src="img/work/slider/hopps/hopps-crew.jpg" alt=""></div>
-								<div class="project__slide"><video width="720" height="540" autoplay loop muted><source src="img/work/slider/hopps/hopps-team-video.mp4" type="video/mp4"></video></div>
+								<div class="project__slide"><video width="720" height="540" playsinline webkit-playsinline autoplay loop muted><source src="img/work/slider/hopps/hopps-team-video.mp4" type="video/mp4"></video></div>
 								<div class="project__slide"><img src="img/work/slider/hopps/hopps-brandi.jpg" alt=""></div>
 								<div class="project__slide"><img src="img/work/slider/hopps/hopps-hat-and-tshirt.jpg" alt=""></div>
 								<div class="project__slide"><img src="img/work/slider/hopps/hopps-hat-in-cart-menu.jpg" alt=""></div>
@@ -111,8 +111,8 @@
 										</div>	
 									</div>
 								</div>	
-								<div class="project__slide"><video width="320" height="240" autoplay loop muted><source src="img/work/slider/hta-health/hta-health-landing-video-tablet.mp4" type="video/mp4"></video></div>
-								<div class="project__slide"><video width="320" height="240" autoplay loop muted><source src="img/work/slider/hta-health/hta-agency-video-tablet.mp4" type="video/mp4"></video></div>
+								<div class="project__slide"><video width="320" height="240" playsinline webkit-playsinline playsinline webkit-playsinline autoplay loop muted><source src="img/work/slider/hta-health/hta-health-landing-video-tablet.mp4" type="video/mp4"></video></div>
+								<div class="project__slide"><video width="320" height="240" playsinline webkit-playsinline playsinline webkit-playsinline autoplay loop muted><source src="img/work/slider/hta-health/hta-agency-video-tablet.mp4" type="video/mp4"></video></div>
 							</div>
 						</div>
 					</div>
@@ -198,7 +198,7 @@
 									</div>
 								</div>	
 								<div class="project__slide"><img src="img/work/slider/nec/nec-driver.jpg" alt=""></div>
-								<div class="project__slide"><video width="320" height="240" autoplay loop muted><source src="img/work/slider/nec/nec-video-tablet.mp4" type="video/mp4"></video></div>
+								<div class="project__slide"><video width="320" height="240" playsinline webkit-playsinline autoplay loop muted><source src="img/work/slider/nec/nec-video-tablet.mp4" type="video/mp4"></video></div>
 								<div class="project__slide"><img src="img/work/slider/nec/nec-tablet-menu.jpg" alt=""></div>
 								<div class="project__slide"><img src="img/work/slider/nec/nec-mobile-group.jpg" alt=""></div>
 								<div class="project__slide"><img src="img/work/slider/nec/nec-mobile-menu.jpg" alt=""></div>
