--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
 					<circle cx="12" cy="12" r="3" fill="#111"></circle>
 				</svg>
-				Drag left or right...Enjoy
+				
 			</div>
 		</div>
 
@@ -186,7 +186,7 @@
 									<div class="project__info">
 										<h2 class="project__title">	
 											<a href="https://nationalexp.com/" target="_blank">
-												National Express Carriers
+												National Express
 												<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
 													<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line>
 												</svg>
@@ -234,6 +234,19 @@
 			</div>
 		</div>
 		<div class="footer">
+			<div class="footer__link">
+				<a href="mailto:hello@petekats.com">
+					<span class="fw--semi-bold">Say Hello</span>
+				</a>
+			</div>
+			<div class="footer__link">
+				<a href="https://www.linkedin.com/in/pete-katsaboulas-6839bb79/" target="_blank">
+					<span class="fw--semi-bold">Linkedin</span>
+				</a>
+			</div>
+
+
+			
 				
 		</div>
 	</main>
