address resize firing on mobile ios

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600&display=swap" rel="stylesheet">
 	
-	<link rel="stylesheet" href="css/main.css?v=1.1">
+	<link rel="stylesheet" href="css/main.css?v=1.2">
 
 </head>
 
@@ -82,16 +82,16 @@
 										</div>
 									</div>
 								</div>	
-								<div class="project__slide"><img src="img/work/slider/courtland/courtland-1.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/courtland/courtland-6.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/courtland/courtland-12.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/courtland/courtland-7.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/courtland/courtland-4.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/courtland/courtland-9.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/courtland/courtland-3.jpg" alt=""></div>	
-								<div class="project__slide"><img src="img/work/slider/courtland/courtland-11.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/courtland/courtland-13.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/courtland/courtland-8.jpg" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/courtland/courtland-1.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/courtland/courtland-6.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/courtland/courtland-12.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/courtland/courtland-7.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/courtland/courtland-4.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/courtland/courtland-9.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/courtland/courtland-3.jpg" loading="lazy" alt=""></div>	
+								<div class="project__slide"><img src="img/work/slider/courtland/courtland-11.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/courtland/courtland-13.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/courtland/courtland-8.jpg" loading="lazy" alt=""></div>
 							</div>
 						</div>
 					</div>
@@ -139,14 +139,14 @@
 										</div>	
 									</div>
 								</div>	
-								<div class="project__slide"><img src="img/work/slider/village-health/village-brand.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/village-health/village-home-mobile.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/village-health/village-father-baby.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/village-health/village-pricing-tablet.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/village-health/village-map-tablet.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/village-health/village-mobile-group.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/village-health/village-kids.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/village-health/village-sign-up-mobile.jpg" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/village-health/village-brand.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/village-health/village-home-mobile.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/village-health/village-father-baby.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/village-health/village-pricing-tablet.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/village-health/village-map-tablet.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/village-health/village-mobile-group.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/village-health/village-kids.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/village-health/village-sign-up-mobile.jpg" loading="lazy" alt=""></div>
 							</div>
 						</div>
 					</div>
@@ -166,11 +166,11 @@
 										</div>	
 									</div>
 								</div>	
-								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-2.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-1.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-3.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-4.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-5.jpg" alt=""></div>	
+								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-2.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-1.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-3.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-4.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-5.jpg" loading="lazy" alt=""></div>	
 							</div>
 						</div>
 					</div>
@@ -197,12 +197,12 @@
 										</div>	
 									</div>
 								</div>	
-								<div class="project__slide"><img src="img/work/slider/nec/nec-driver.jpg" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/nec/nec-driver.jpg" loading="lazy" alt=""></div>
 								<div class="project__slide"><video width="320" height="240" playsinline webkit-playsinline autoplay loop muted><source src="img/work/slider/nec/nec-video-tablet.mp4" type="video/mp4"></video></div>
-								<div class="project__slide"><img src="img/work/slider/nec/nec-tablet-menu.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/nec/nec-mobile-group.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/nec/nec-mobile-menu.jpg" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/nec/nec-image-group.jpg" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/nec/nec-tablet-menu.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/nec/nec-mobile-group.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/nec/nec-mobile-menu.jpg" loading="lazy" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/nec/nec-image-group.jpg" loading="lazy" alt=""></div>
 							</div>
 						</div>
 					</div>
@@ -246,10 +246,11 @@
 			</div>	
 		</div>
 	</main>
-
+    <!--
 	<div id="load-stuff">
 		<div id="load-num">0</div>
 	</div>
+	-->
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/Draggable.min.js" integrity="sha512-S6SXKUZ11xkCoD/UuhdXG4B4iiCXng+xW2KCx0lgfQqmdqtjqGgm4WChdYIhO1F/CmH21vnkSUvPEgXNgDwkjg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
