add dark mode functionality

--- a/index.html
+++ b/index.html
@@ -245,12 +245,12 @@
 		<div class="footer">
 			<div class="footer__link">
 				<a href="mailto:hello@petekats.com">
-					<span class="fw--semi-bold">Say Hello</span>
+					<span class="fw--semibold">Email</span>
 				</a>
 			</div>
 			<div class="footer__link">
 				<a href="https://www.linkedin.com/in/pete-katsaboulas-6839bb79/" target="_blank">
-					<span class="fw--semi-bold">Linkedin</span>
+					<span class="fw--semibold">Linkedin</span>
 				</a>
 			</div>	
 		</div>
