--- a/index.html
+++ b/index.html
@@ -11,17 +11,28 @@
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel='preload' as='style' href='https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600&display=swap'>
 	<link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600&display=swap" rel="stylesheet">
-	<link rel='preload' as='style' href='https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600&display=swap'>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600&display=swap" rel="stylesheet">
 	
-	<link rel="preload" href="css/app.css?v=2.6">
-	<link rel="stylesheet" href="css/app.css?v=2.6">
+	<link rel="stylesheet" href="css/app.css?v=1.4">
 
 </head>
 
-<body data-theme="dark">
+<body data-theme="light">
+
+	<header>
+		<div class="logo"><img src="img/logo.png" height="24" alt="rock out while making stuff"></div>
+		<div class="logo-light"><img src="img/logo-light.png" height="24" alt="rock out while making stuff"></div>
+		<div class="theme__mode-toggle">
+			<div class="toggle-icon">
+				<div class="toggle-icon__dark"><img src="img/icons/moon.svg" width="16" alt="dark mode icon"></div>
+				<div class="toggle-icon__light"><img src="img/icons/sun.svg" width="16" alt="light mode icon"></div>
+			</div>
+			<div class="toggle-container">
+				<div class="toggle-btn"></div>
+			</div>
+		</div>
+	</header>
 	
 	<main>
 		<div class="hero">
@@ -170,30 +181,6 @@
 							<div class="project__slides">
 								<div class="project__slide">
 									<div class="project__info">
-										<h2 class="project__title fs--2 fw--semibold">Bulldog Baseball</h2>
-										<div class="role ff--mono">
-											Social Media, Design
-										</div>	
-									</div>
-								</div>	
-								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-2.jpg" width="640" height="640" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-1.jpg" width="640" height="640" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-3.jpg" width="640" height="640" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-4.jpg" width="640" height="640" alt=""></div>
-								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-5.jpg" width="640" height="640" alt=""></div>	
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="project">
-				<div class="container">
-					<div class="project__square"></div> 
-					<div class="project__blur">
-						<div class="project__slider">
-							<div class="project__slides">
-								<div class="project__slide">
-									<div class="project__info">
 										<h2 class="project__title fs--2 fw--semibold">	
 											<a href="https://nationalexp.com/" target="_blank">
 												National Express
@@ -215,7 +202,68 @@
 								<div class="project__slide"><img src="img/work/slider/nec/nec-image-group.jpg" width="640" height="640" alt=""></div>
 							</div>
 						</div>
-					</div> width="720" height="720"
+					</div> 
+				</div>
+			</div>
+			<div class="project">
+				<div class="container">
+					<div class="project__square"></div> 
+					<div class="project__blur">
+						<div class="project__slider">
+							<div class="project__slides">
+								<div class="project__slide">
+									<div class="project__info">
+										<h2 class="project__title fs--2 fw--semibold">
+											<a href="https://haulact.com/" target="_blank">
+												HaulACT.com
+												<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
+													<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line>
+												</svg>
+										    </a>
+										</h2>
+										<div class="role ff--mono">
+											Concept, Design, Wordpress, Development
+										</div>	
+									</div>
+								</div>	
+								<div class="project__slide"><img src="img/work/slider/act/act-home-tablet.jpg" width="640" height="640" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/act/act-core-values-tablet.jpg" width="640" height="640" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/act/act-mood-2.jpg" width="640" height="640" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/act/act-home-mobile.jpg" width="640" height="640" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/act/act-video-overlay-tablet.jpg" width="640" height="640" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/act/act-group-mobile.jpg" width="640" height="640" alt=""></div>	
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="project">
+				<div class="container">
+					<div class="project__square"></div> 
+					<div class="project__blur">
+						<div class="project__slider">
+							<div class="project__slides">
+								<div class="project__slide">
+									<div class="project__info">
+										<h2 class="project__title fs--2 fw--semibold">Bulldog Baseball</h2>
+										<div class="role ff--mono">
+											Social Media, Design
+										</div>	
+									</div>
+								</div>	
+								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-2.jpg" width="640" height="640" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-1.jpg" width="640" height="640" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-3.jpg" width="640" height="640" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-4.jpg" width="640" height="640" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/bhs/bhs-bab-5.jpg" width="640" height="640" alt=""></div>	
+								<div class="project__slide"><img src="img/work/slider/bhs/bhs-top-dog.jpg" width="640" height="640" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/bhs/bhs-gameday-split.jpg" width="640" height="640" alt=""></div>	
+								<div class="project__slide"><img src="img/work/slider/bhs/bhs-lineup-faces.jpg" width="640" height="640" alt=""></div>
+								<div class="project__slide"><img src="img/work/slider/bhs/bhs-score-split.jpg" width="640" height="640" alt=""></div>	
+								<div class="project__slide"><img src="img/work/slider/bhs/bhs-classic-split.jpg" width="640" height="640" alt=""></div>			
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div><!-- end .work -->
@@ -224,7 +272,7 @@
 			<div class="container">
 				<div class="flex">
 					<div class="flex--col-2">
-						<h3 class="fs--3 fw--medium">Hi, I'm Pete and<br> I <img class="heart-svg" src="img/heart.svg" width="40" alt=""> to build things<br> that look great<br> in browsers.</h3>
+						<h3 class="fs--3 fw--medium">Hi, I'm Pete and<br> I <img class="heart-svg" src="img/heart.svg" width="40" alt=""> making things<br> that look great<br> in browsers.</h3>
 					</div>
 					<div class="flex--col-2">
 						<section>
@@ -245,7 +293,7 @@
 		</div>
 		<div class="footer">
 			<div class="footer__link">
-				<a href="mailto:hello@petekats.com">
+				<a href="mailto:pete@petekats.com">
 					<span class="fw--semibold">Email</span>
 				</a>
 			</div>
@@ -264,21 +312,11 @@
 		</div>
 	</div>
 
-	<div class="theme__mode-toggle">
-		<div class="toggle-icon">
-			<div class="toggle-icon__dark"><img src="img/icons/moon.svg" width="16" alt="dark mode icon"></div>
-			<div class="toggle-icon__light"><img src="img/icons/sun.svg" width="16" alt="light mode icon"></div>
-		</div>
-		<div class="toggle-container">
-			<div class="toggle-btn"></div>
-		</div>
-	</div>
-
 	<script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@0.2.28/bundled/lenis.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/Draggable.min.js" integrity="sha512-S6SXKUZ11xkCoD/UuhdXG4B4iiCXng+xW2KCx0lgfQqmdqtjqGgm4WChdYIhO1F/CmH21vnkSUvPEgXNgDwkjg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="js/app.js?v=2.6"></script>
+	<script src="js/app.js?v=1.4"></script>
 
 </body>
 </html>
