--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
 						<div class="project__slider">
 							<div class="slide__active"><div class="slide__active-inner"></div></div>
 							<div class="slide__thumbs">
-								<div class="thumb"><img src="img/work/slider/hopps/hopps-1.jpg" width="640" alt="" draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/hopps/hopps-2.jpg" width="640" alt="" draggable="false"></div>
-								<div class="thumb"><video width="640" playsinline autoplay loop muted><source src="img/work/slider/hopps/hopps-video.mp4" type="video/mp4"></video></div>
-								<div class="thumb"><img src="img/work/slider/hopps/hopps-3.jpg" width="640" alt="" draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/hopps/hopps-4.jpg" width="640" alt="" draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/hopps/hopps-5.jpg" width="640" alt="" draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/hopps/hopps-6.jpg" width="640" alt="" draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/hopps/hopps-7.jpg" width="640" alt="" draggable="false"></div>	
+								<div class="thumb"><img src="img/work/hopps/hopps-1.jpg" width="640" alt="" draggable="false"></div>
+								<div class="thumb"><img src="img/work/hopps/hopps-2.jpg" width="640" alt="" draggable="false"></div>
+								<div class="thumb"><video width="640" playsinline autoplay loop muted><source src="img/work/hopps/hopps-video.mp4" type="video/mp4"></video></div>
+								<div class="thumb"><img src="img/work/hopps/hopps-3.jpg" width="640" alt="" draggable="false"></div>
+								<div class="thumb"><img src="img/work/hopps/hopps-4.jpg" width="640" alt="" draggable="false"></div>
+								<div class="thumb"><img src="img/work/hopps/hopps-5.jpg" width="640" alt="" draggable="false"></div>
+								<div class="thumb"><img src="img/work/hopps/hopps-6.jpg" width="640" alt="" draggable="false"></div>
+								<div class="thumb"><img src="img/work/hopps/hopps-7.jpg" width="640" alt="" draggable="false"></div>	
 							</div>
 						</div>
 					</div>
@@ -74,10 +74,10 @@
 			<div class="work__row">
 				<div class="work__grid container">
 					<div class="project align--right">
-					  <div class="project__header">
-						  <h2 class="ff--mono">The Courtland Group</h2>
-						  <div class="project__info-btn ff--mono">Info</div>
-						</div>
+					    <div class="project__header">
+							<h2 class="ff--mono">The Courtland Group</h2>
+							<div class="project__info-btn ff--mono">Info</div>
+					    </div>
 						<div class="project__info">
 							  <p>The Courtland Group breathes new life into time-honored spaces in Knoxville, TN. They do this through preservation, 
 								renovation and ongoing maintenance. I helped designed a website that reflects the beauty of their work.</p>
@@ -96,14 +96,14 @@
 						<div class="project__slider">
 							<div class="slide__active"><div class="slide__active-inner"></div></div>
 							<div class="slide__thumbs">
-								<div class="thumb"><img src="img/work/slider/courtland/courtland-1.jpg" width="640" alt=""draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/courtland/courtland-2.jpg" width="640" alt=""draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/courtland/courtland-3.jpg" width="640" alt=""draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/courtland/courtland-4.jpg" width="640" alt=""draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/courtland/courtland-5.jpg" width="640" alt=""draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/courtland/courtland-6.jpg" width="640" alt=""draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/courtland/courtland-7.jpg" width="640" alt=""draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/courtland/courtland-8.jpg" width="640" alt=""draggable="false"></div>
+								<div class="thumb"><img src="img/work/courtland/courtland-1.jpg" width="640" alt=""draggable="false"></div>
+								<div class="thumb"><img src="img/work/courtland/courtland-2.jpg" width="640" alt=""draggable="false"></div>
+								<div class="thumb"><img src="img/work/courtland/courtland-3.jpg" width="640" alt=""draggable="false"></div>
+								<div class="thumb"><img src="img/work/courtland/courtland-4.jpg" width="640" alt=""draggable="false"></div>
+								<div class="thumb"><img src="img/work/courtland/courtland-5.jpg" width="640" alt=""draggable="false"></div>
+								<div class="thumb"><img src="img/work/courtland/courtland-6.jpg" width="640" alt=""draggable="false"></div>
+								<div class="thumb"><img src="img/work/courtland/courtland-7.jpg" width="640" alt=""draggable="false"></div>
+								<div class="thumb"><img src="img/work/courtland/courtland-8.jpg" width="640" alt=""draggable="false"></div>
 							</div>
 						</div>
 					</div>
@@ -113,8 +113,8 @@
 				<div class="work__grid container">
 					<div class="project align--right">
 						<div class="project__header">
-						  <h2 class="ff--mono">Hightower Health</h2>
-						  <div class="project__info-btn ff--mono">Info</div>
+							<h2 class="ff--mono">Hightower Health</h2>
+							<div class="project__info-btn ff--mono">Info</div>
 						</div>
 						<div class="project__info">
 							  <p>Hightower is a leader in recruitment advertising. As their client sector began to expand, I explored creating niche-based landing pages that could address various industries &mdash; the medical industry in this case.</p>
@@ -132,12 +132,12 @@
 						<div class="project__slider">
 							<div class="slide__active"><div class="slide__active-inner"></div></div>
 							<div class="slide__thumbs">
-								<div class="thumb"><video width="640" playsinline autoplay loop muted><source src="img/work/slider/hta-health/hta-health-video.mp4" type="video/mp4"></video></div>
-								<div class="thumb"><img src="img/work/slider/hta-health/hta-health-1.jpg" width="640" alt=""draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/hta-health/hta-health-2.jpg" width="640" alt=""draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/hta-health/hta-health-3.jpg" width="640" alt=""draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/hta-health/hta-health-4.jpg" width="640" alt=""draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/hta-health/hta-health-5.jpg" width="640" alt=""draggable="false"></div>
+								<div class="thumb"><video width="640" playsinline autoplay loop muted><source src="img/work/hta-health/hta-health-video.mp4" type="video/mp4"></video></div>
+								<div class="thumb"><img src="img/work/hta-health/hta-health-1.jpg" width="640" alt=""draggable="false"></div>
+								<div class="thumb"><img src="img/work/hta-health/hta-health-2.jpg" width="640" alt=""draggable="false"></div>
+								<div class="thumb"><img src="img/work/hta-health/hta-health-3.jpg" width="640" alt=""draggable="false"></div>
+								<div class="thumb"><img src="img/work/hta-health/hta-health-4.jpg" width="640" alt=""draggable="false"></div>
+								<div class="thumb"><img src="img/work/hta-health/hta-health-5.jpg" width="640" alt=""draggable="false"></div>
 							</div>
 						</div>
 					</div>
@@ -146,9 +146,9 @@
 			<div class="work__row">
 				<div class="work__grid container">
 					<div class="project">
-					  <div class="project__header">
-						  <h2 class="ff--mono">HaulACT.com</h2>
-						  <div class="project__info-btn ff--mono">Info</div>
+					    <div class="project__header">
+							<h2 class="ff--mono">HaulACT.com</h2>
+							<div class="project__info-btn ff--mono">Info</div>
 						</div>
 						<div class="project__info">
 							  <p>American Central Transport is a Midwestern transportation company. They truly are a values oriented workplace. I re-designed and developed their new driver recruiting website to refelct those values.</p>
@@ -167,12 +167,12 @@
 						<div class="project__slider">
 							<div class="slide__active"><div class="slide__active-inner"></div></div>
 							<div class="slide__thumbs">
-								<div class="thumb"><img src="img/work/slider/act/act-1.jpg" width="640" alt="" draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/act/act-2.jpg" width="640" alt="" draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/act/act-3.jpg" width="640" alt="" draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/act/act-4.jpg" width="640" alt="" draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/act/act-5.jpg" width="640" alt="" draggable="false"></div>
-								<div class="thumb"><img src="img/work/slider/act/act-6.jpg" width="640" alt="" draggable="false"></div>
+								<div class="thumb"><img src="img/work/act/act-1.jpg" width="640" alt="" draggable="false"></div>
+								<div class="thumb"><img src="img/work/act/act-2.jpg" width="640" alt="" draggable="false"></div>
+								<div class="thumb"><img src="img/work/act/act-3.jpg" width="640" alt="" draggable="false"></div>
+								<div class="thumb"><img src="img/work/act/act-4.jpg" width="640" alt="" draggable="false"></div>
+								<div class="thumb"><img src="img/work/act/act-5.jpg" width="640" alt="" draggable="false"></div>
+								<div class="thumb"><img src="img/work/act/act-6.jpg" width="640" alt="" draggable="false"></div>
 							</div>
 						</div>
 					</div>
@@ -182,8 +182,8 @@
 				<div class="work__grid container">
 					<div class="project align--right">
 						<div class="project__header">
-						  <h2 class="ff--mono">Village Healthcare</h2>
-						  <div class="project__info-btn ff--mono">Info</div>
+							<h2 class="ff--mono">Village Healthcare</h2>
+							<div class="project__info-btn ff--mono">Info</div>
 						</div>
 						<div class="project__info">
 							  <p>Village Healthcare seeks to make healthcare easy and affordable by offering a better way to wellness. I was tasked with designing &amp; developing their branding and online presence.</p>
@@ -202,14 +202,14 @@
 						<div class="project__slider">
 							<div class="slide__active"><div class="slide__active-inner"></div></div>
 							<div class="slide__thumbs">
-								<div class="thumb"><img src="img/work/slider/village-health/village-1.jpg" width="640" alt=""></div>
-								<div class="thumb"><img src="img/work/slider/village-health/village-2.jpg" width="640" alt=""></div>
-								<div class="thumb"><img src="img/work/slider/village-health/village-3.jpg" width="640" alt=""></div>
-								<div class="thumb"><img src="img/work/slider/village-health/village-4.jpg" width="640" alt=""></div>
-								<div class="thumb"><img src="img/work/slider/village-health/village-5.jpg" width="640" alt=""></div>
-								<div class="thumb"><img src="img/work/slider/village-health/village-6.jpg" width="640" alt=""></div>
-								<div class="thumb"><img src="img/work/slider/village-health/village-7.jpg" width="640" alt=""></div>
-								<div class="thumb"><img src="img/work/slider/village-health/village-8.jpg" width="640" alt=""></div>
+								<div class="thumb"><img src="img/work/village-health/village-1.jpg" width="640" alt=""></div>
+								<div class="thumb"><img src="img/work/village-health/village-2.jpg" width="640" alt=""></div>
+								<div class="thumb"><img src="img/work/village-health/village-3.jpg" width="640" alt=""></div>
+								<div class="thumb"><img src="img/work/village-health/village-4.jpg" width="640" alt=""></div>
+								<div class="thumb"><img src="img/work/village-health/village-5.jpg" width="640" alt=""></div>
+								<div class="thumb"><img src="img/work/village-health/village-6.jpg" width="640" alt=""></div>
+								<div class="thumb"><img src="img/work/village-health/village-7.jpg" width="640" alt=""></div>
+								<div class="thumb"><img src="img/work/village-health/village-8.jpg" width="640" alt=""></div>
 							</div>
 						</div>
 					</div>
@@ -218,9 +218,9 @@
 			<div class="work__row">
 				<div class="work__grid container">
 					<div class="project">
-					  <div class="project__header">
-						  <h2 class="ff--mono">National Express Carriers</h2>
-						  <div class="project__info-btn ff--mono">Info</div>
+					    <div class="project__header">
+							<h2 class="ff--mono">National Express Carriers</h2>
+							<div class="project__info-btn ff--mono">Info</div>
 						</div>
 						<div class="project__info">
 							  <p>Based in the Chicago area, National Express Carriers is a modern, growing transportation company. I was asked to design and develop a fresh new look for their web presence &mdash; a hybrid customer/driver facing site.</p>
@@ -239,12 +239,12 @@
 						<div class="project__slider">
 							<div class="slide__active"><div class="slide__active-inner"></div></div>
 							<div class="slide__thumbs">
-								<div class="thumb"><img src="img/work/slider/nec/nec-1.jpg" alt=""></div>
-								<div class="thumb"><video width="640" playsinline autoplay loop muted><source src="img/work/slider/nec/nec-video.mp4" type="video/mp4"></video></div>
-								<div class="thumb"><img src="img/work/slider/nec/nec-2.jpg" width="640" height="640" alt=""></div>
-								<div class="thumb"><img src="img/work/slider/nec/nec-4.jpg" width="640" height="640" alt=""></div>
-								<div class="thumb"><img src="img/work/slider/nec/nec-5.jpg" width="640" height="640" alt=""></div>
-								<div class="thumb"><img src="img/work/slider/nec/nec-3.jpg" width="640" height="640" alt=""></div>
+								<div class="thumb"><img src="img/work/nec/nec-1.jpg" alt=""></div>
+								<div class="thumb"><video width="640" playsinline autoplay loop muted><source src="img/work/nec/nec-video.mp4" type="video/mp4"></video></div>
+								<div class="thumb"><img src="img/work/nec/nec-2.jpg" width="640" height="640" alt=""></div>
+								<div class="thumb"><img src="img/work/nec/nec-4.jpg" width="640" height="640" alt=""></div>
+								<div class="thumb"><img src="img/work/nec/nec-5.jpg" width="640" height="640" alt=""></div>
+								<div class="thumb"><img src="img/work/nec/nec-3.jpg" width="640" height="640" alt=""></div>
 							</div>
 						</div>
 					</div>
@@ -254,8 +254,8 @@
 				<div class="work__grid container">
 					<div class="project">
 						<div class="project__header">
-						  <h2 class="ff--mono">Bulldog Baseball</h2>
-						  <div class="project__info-btn ff--mono">Info</div>
+							<h2 class="ff--mono">Bulldog Baseball</h2>
+							<div class="project__info-btn ff--mono">Info</div>
 						</div>
 						<div class="project__info">
 							  <p>When your son's coach finds out your a designer this is what happens. Seriously though, I had a lot of fun doing these social media graphics for Brandon Bulldog Baseball. This is a small sample from the season.</p>
@@ -273,14 +273,14 @@
 						<div class="project__slider">
 							<div class="slide__active"><div class="slide__active-inner"></div></div>
 							<div class="slide__thumbs">
-								<div class="thumb"><img src="img/work/slider/bhs/bhs-1.jpg" width="640" alt=""></div>
-								<div class="thumb"><img src="img/work/slider/bhs/bhs-2.jpg" width="640" alt=""></div>
-								<div class="thumb"><img src="img/work/slider/bhs/bhs-3.jpg" width="640" alt=""></div>	
-								<div class="thumb"><img src="img/work/slider/bhs/bhs-4.jpg" width="640" alt=""></div>
-								<div class="thumb"><img src="img/work/slider/bhs/bhs-5.jpg" width="640" alt=""></div>	
-								<div class="thumb"><img src="img/work/slider/bhs/bhs-6.jpg" width="640" alt=""></div>
-								<div class="thumb"><img src="img/work/slider/bhs/bhs-7.jpg" width="640" alt=""></div>
-								<div class="thumb"><img src="img/work/slider/bhs/bhs-8.jpg" width="640" alt=""></div>
+								<div class="thumb"><img src="img/work/bhs/bhs-1.jpg" width="640" alt=""></div>
+								<div class="thumb"><img src="img/work/bhs/bhs-2.jpg" width="640" alt=""></div>
+								<div class="thumb"><img src="img/work/bhs/bhs-3.jpg" width="640" alt=""></div>	
+								<div class="thumb"><img src="img/work/bhs/bhs-4.jpg" width="640" alt=""></div>
+								<div class="thumb"><img src="img/work/bhs/bhs-5.jpg" width="640" alt=""></div>	
+								<div class="thumb"><img src="img/work/bhs/bhs-6.jpg" width="640" alt=""></div>
+								<div class="thumb"><img src="img/work/bhs/bhs-7.jpg" width="640" alt=""></div>
+								<div class="thumb"><img src="img/work/bhs/bhs-8.jpg" width="640" alt=""></div>
 							</div>
 						</div>
 					</div>
@@ -332,8 +332,7 @@
 
 	<div class="loader">
 		<div class="loader-wrap">
-			<img src="img/loader.svg" class="spinner" width="80" alt="">
-			<img src="img/loader-hand.png" class="hand" width="32" alt="">
+			<img src="img/loading.svg" width="70" alt="">
 		</div>
 	</div>
 
